add users and auth
