# internal/app/core/entities/users-filter/users-filter.go
@@ -1,8 +1,8 @@
 package users_filter
 
 type UserFilterRequest struct {
-	Email string `form:"email" binding:"omitempty,max=255"`
-	Name  string `form:"name" binding:"omitempty,max=255"`
+	Username string `form:"username" binding:"omitempty,max=255"`
+	Name     string `form:"name" binding:"omitempty,max=255"`
 
 	Limit uint `form:"limit" binding:"omitempty,min=1,max=100"`
 	Shift uint `form:"shift" binding:"omitempty,min=0"`
